--- a/nodejs-blog/views/index.pug
+++ b/nodejs-blog/views/index.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  ul
+  ul.list-group
     each article, i in articles
-      li= article.title
+      li.list-group-item= article.title
