--- a/nodejs-blog/views/index.pug
+++ b/nodejs-blog/views/index.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  h1 Articles
   ul.list-group
     each article, i in articles
       li.list-group-item= article.title
