it dosen't work with a space befor =, eg:a(href=/articles/ + article._id)= article.title

--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -1,12 +1,12 @@
 doctype html
 html(lang="en")
   head
-    title Knowledgebase
+    title Coding Everyday
     link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.css")
   body
     nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
       .container
-        a.navbar-brand(href='#') Knowledgebase
+        a.navbar-brand(href='#') Coding Everyday
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarsExample05', aria-controls='navbarsExample05', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         #navbarsExample05.collapse.navbar-collapse
@@ -23,6 +23,6 @@ html(lang="en")
       br
       hr
       footer
-        p Copyright &copy; 2018
+        p Copyright &copy; 2019
     script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
     script(src="/bower_components/jquery/dist/jquery.js")
