--- a/nodejs-blog/views/edit.pug
+++ b/nodejs-blog/views/edit.pug
@@ -3,7 +3,7 @@ extends layout
 block content
 
     h1 #{title}
-    form(method="post", action="/articles/create")
+    form(method="post", action="/articles/update/" + article._id)
         .form-group
             label Title:
             input.form-control(name="title", type="text")
