in the edit form, there are default text, using value=, but body is outside

--- a/nodejs-blog/views/edit.pug
+++ b/nodejs-blog/views/edit.pug
@@ -6,12 +6,12 @@ block content
     form(method="post", action="/articles/update/" + article._id)
         .form-group
             label Title:
-            input.form-control(name="title", type="text")
+            input.form-control(name="title", type="text", value= article.title)
         .form-group
             label Author:
-            input.form-control(name="author", type="text")
+            input.form-control(name="author", type="text", value= article. author)
         .form-group
             label Body:
-            textarea.form-control(name="body")
+            textarea.form-control(name="body")= article.body
         br
         input.btn.btn-primary(type="submit", value="Submit")
