dono why script(src...bootstrp.jsneed to under/after jquery.js, otherwise there is a error

--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -25,6 +25,6 @@ html(lang="en")
       hr
       footer
         p Copyright &copy; 2019
-    script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
     script(src="/bower_components/jquery/dist/jquery.js")
-    script(src="js/main.js")
+    script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
+    script(src="/js/main.js")
