https://github.com/visionmedia/express-messages cope from  message+, then using jade language, need to read this article

--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -20,6 +20,7 @@ html(lang="en")
               a.nav-link(href='/articles/new') Add Article
 
     .container
+      //- != messages('message', locals)
       block content
       br
       hr
