--- a/nodejs-blog/views/message.pug
+++ b/nodejs-blog/views/message.pug
@@ -1,5 +1,8 @@
 .messages
   each type in Object.keys(messages)
-    ul(class="#{type}")
-      each message in messages[type]
-        li= message
+    //- ul(class="#{type}")
+    //-   each message in messages[type]
+        //- li= message
+    each message in messages[type]
+    //-  bootstrap
+        div(class="alert alert-" + type) #{message}
