need to really be carefull of the space in pug, fix the problem

--- a/nodejs-blog/views/users/register.pug
+++ b/nodejs-blog/views/users/register.pug
@@ -15,9 +15,8 @@ block content
             input.form-control(name="username", type="text")
         .form-group
             label Password:
-            textarea.form-control(name="password", type="password")
-         .form-group
+            input.form-control(name="password", type="password")   
+        .form-group
             label Password Confirmation:
-            textarea.form-control(name="password-confirmation", type="password")
-        br
+            input.form-control(name="password_confirmation", type="password")
         input.btn.btn-primary(type="submit", value="Submit")
