got register and login button show on login page

--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -19,6 +19,12 @@ html(lang="en")
             li.nav-item
               a.nav-link(href='/articles/new') Add Article
 
+          ul.navbar-nav.narbar-right
+            li.nav-item
+              a.nav-link(href='/users/register') Register
+            li.nav-item
+              a.nav-link(href='/users/login') Login
+
     .container
       != messages('message', locals)
       if errors
