--- a/nodejs-blog/views/articles/show.pug
+++ b/nodejs-blog/views/articles/show.pug
@@ -2,7 +2,8 @@ extends ../layout
 
 block content
   h1= article.title
-  h5 Written by #{article.author}
+  h5 Written by #{author}  
+  //- author: user.name
   p= article.body
   hr
   a.btn.btn-primary.mr-2(href="/articles/" + article.id + "/edit") Edit
