ANZAC DAY having a day off

--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
           ul.navbar-nav.mr-auto
             li.nav-item.active
               a.nav-link(href='/')
-                | Home
+                | Home ANZAC DAY having a day off 
                 span.sr-only (current)
             li.nav-item
               a.nav-link(href='/articles/new') Add Article
