--- a/nodejs-blog/views/layout.pug
+++ b/nodejs-blog/views/layout.pug
@@ -14,15 +14,16 @@ html(lang="en")
           ul.navbar-nav.mr-auto
             li.nav-item.active
               a.nav-link(href='/')
-                | Home ANZAC DAY having a day off 
+                | Home 
                 span.sr-only (current)
-            li.nav-item
-              a.nav-link(href='/articles/new') Add Article
+            if user
+              li.nav-item
+                a.nav-link(href='/articles/new') Add Article
 
           ul.navbar-nav.narbar-right
             if user
-             li.nav-item
-              a.nav-link(href='/users/logout') Logout
+              li.nav-item
+                a.nav-link(href='/users/logout') Logout
             else
               li.nav-item
                 a.nav-link(href='/users/register') Register
